fixed PageImage so it actually implements not full-bleed images, and drafted /339r space page

--- a/styles/global.css
+++ b/styles/global.css
@@ -363,12 +363,16 @@ p + ol {
 }
 
 .full-body {
-  /* grid-column: 4 / 10; */
-  width: 100%;
+  grid-column: 4 / -4; 
 }
 
 /* TODO Possible to pull in breakpoints? */
-@media (min-width: 55px) {
+@media (max-width: 1100px) {
+  .full-body {
+    grid-column: 2 / -2;
+  }
+}
+@media (max-width: 550px) {
   .full-body {
     grid-column: 1 / -1;
   }
